Turn overflow off on the main ui body so we avoid scrollbars appearing when a dialog gets too large.

--- a/libproxyobject/plugins/ogre/data/chrome/css/ui.css
+++ b/libproxyobject/plugins/ogre/data/chrome/css/ui.css
@@ -4,6 +4,7 @@ body {
 	padding: 0;
 	width: 100%;
 	height: 100%;
+        overflow: hidden;
 }
 div#transparency {
 	float: left;
